add styles to pastelero's page

--- a/pastelero.html
+++ b/pastelero.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastelería Sabor Espacial</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -13,17 +14,17 @@
     </header>
 
     <section>
-        <h2>Cantidad de Sabores</h2>
+        <h2 class="subtitle">Cantidad de Sabores</h2>
         <label for="cantSabores">Disponible:</label><br>
         <input type="range" id="cantSabores" name="cantSabores" min="0" max="10" value="8"><br> 
         
-        <h2>Cantidad de Adornos</h2>
+        <h2 class="subtitle">Cantidad de Adornos</h2>
         <label for="cantAdornos">Disponible:</label><br>
         <input type="range" id="cantAdornos" name="cantAdornos" min="0" max="10" value="4"><br> 
     </section>
 
     <section>
-        <h2>Pedidos Realizados</h2>
+        <h2 class="subtitle">Pedidos Realizados</h2>
         <table border>
             <tr>
                 <th>Nombre</th>
