checkbox style change

--- a/pastelero.html
+++ b/pastelero.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>PASTELERÍA SABOR ESPACIAL</h1>
-        <img src="img/logo.png" alt="Logo de la pasteleria" width="300" height="300">
+        <img src="img/logo.png" alt="Logo de la pasteleria"  id="logo">
     </header>
 
     <section class="quantity-container">
