--- a/cliente.html
+++ b/cliente.html
@@ -10,10 +10,9 @@
 <body>
     <header>
         <h1>PASTELERÍA SABOR ESPACIAL</h1>
-        <img src="img/logo.png" alt="Logo de la pasteleria" width="300" height="300">
+        <img src="img/logo.png" alt="Logo de la pasteleria"  id="logo">
     </header>
 
-    <hr>
     <h2 class="title-menu">Menú</h2>
     <section class="flavor-container">
         <h2 class="subtitle">Sabores</h2>
